fix crash with encapsed properties when we have a property with the same name as the class

add test that shows the crash is gone.

BUG: 209814